--- a/dbtree-server/build.gradle
+++ b/dbtree-server/build.gradle
@@ -22,12 +22,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.mapdb:mapdb:3.0.10'
+	implementation 'com.opencsv:opencsv:5.9'
 }
 
 tasks.named('bootBuildImage') {
@@ -36,4 +37,12 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.algoritmos.dbtreeserver.DbtreeServerApplication'
+		)
+	}
 }
